# KINECT

./: CMakeLists.txt  README.md
3LocationData/: traj_data_clean1.txt_  traj_data_clean3.txt  traj_data_drink5.txt  traj_data_plyers1.txt  traj_data_plyers2.txt
Location/: loc_data (copy).txt  loc_data.txt
Object/: obj_mov_data (copy).txt  obj_mov_data.txt
Scene/Kitchen/: surface (copy).txt  surface.txt
Scene/Kitchen/01/: counter.txt  loc_data.txt  loc_data_beg.txt  loc_data_end.txt  loc_data_mid.txt  loc_data_normal.txt  loc_data_tangent.txt  sec_data_const.txt  sec_data_max.txt
Scene/Kitchen/02/: counter.txt  loc_data.txt  loc_data_beg.txt  loc_data_end.txt  loc_data_mid.txt  loc_data_normal.txt  loc_data_tangent.txt  sec_data_const.txt  sec_data_max.txt
Scene/Kitchen/03/: counter.txt  loc_data.txt  loc_data_beg.txt  loc_data_end.txt  loc_data_mid.txt  loc_data_normal.txt  loc_data_tangent.txt  sec_data_const.txt  sec_data_max.txt
Scene/Kitchen/04/: counter.txt  loc_data.txt  loc_data_beg.txt  loc_data_end.txt  loc_data_mid.txt  loc_data_normal.txt  loc_data_tangent.txt  sec_data_const.txt  sec_data_max.txt
Scene/Kitchen/Cup/: loc_data.txt  sec_data_const.txt  sec_data_max.txt  sec_data_min.txt
Scene/Kitchen/Cut1/: counter.txt  loc_data.txt  loc_data_end.txt
aruco/: marker.cpp
common/: TransformVertexShader.vertexshader  controls.cpp  graphparser.cpp  graphparser.hpp  location_parser.cpp  location_parser.hpp  objectloader.cpp  objectloader.hpp  quaternion_utils.hpp
config/: camera.yaml  object.yaml  particle_tracker_cpu.yaml  particle_tracker_gpu.yaml  pose_cache_apple_mean (copy).txt  pose_cache_apple_mean.txt  pose_cache_cup_mean.txt  pose_cache_sponge_mean.txt  visualization.rviz
data/: 170216103001.txt  170216120224.txt
data/old/: 170216114600.txt
old_pre1804/3LocationData/: traj_data_clean4.txt  traj_data_drink1.txt  traj_data_drink3.txt  traj_data_plyers3.txt
old_pre1804/src (copy)/: Graph.cpp  Graph.h  dataDeclaration.h
old_pre1804/surface_data/: surface2.txt  surface4.txt
olds/3LocationData/: traj_data_clean2.txt_  traj_data_clean5.txt  traj_data_clean5.txt_  traj_data_plyers5.txt
olds/old_pre2803/: readme
olds/old_src/: dataDeclarationnew  dbscan.h  util.h  util2.cpp
olds/src (copy)/: algo.cpp  util.h  util2.cpp  util2.h  vtkExtra.cpp
recording/: 170310150957.txt  170310151725.txt  170310155007.txt  170316091330.txt  170316091558.txt  170316091711.txt  170412091429.txt  170412092106.txt  170412092236.txt  170412092433.txt  170412092658.txt  170412092823.txt  170412093018.txt  170418142531.txt  170418142707.txt  170418142758.txt  170418143016.txt  170418143102.txt  170418143152.txt  action_label.txt  action_label.txt~  label.txt  obj_action_label.txt  obj_action_label.txt~  readme  readme~  surface.txt  surface_limit.txt
recording/001/: 170328142032.txt  170329105905.txt
recording/006/: 170328154658.txt  170328154837.txt  170330134533.txt  170330134618.txt  170330143019.txt
recording/007/: 170330144804.txt
recording/008/: 170328153023.txt  170328153053.txt  170328153511.txt  170330135414.txt
recording/01_coffee_drink_sink/: 170307162925.txt  170307163808.txt
recording/03/: 170307180547.txt
recording/03_shelf_clean_throw/: 170307175437.txt
recording/ALL/: 170307170431.txt  170308110240.txt
recording/kb/: action_label.txt  label.txt  obj_action_label.txt
recording/label/: DISPENSER.txt  SHELF.txt  TABLE1.txt  TABLE2.txt  THROW.txt  WASH.txt
recording/misc/: 170419141851.txt  170419142034.txt  170419142059.txt  170419142113.txt  170508093832.txt  170508093911.txt  170508094000.txt  170508094125.txt  170508094653.txt  170508103955.txt  170508104259.txt  170508104634.txt  170508104744.txt  170508105105.txt  170508105122.txt  170508105318.txt  170508105508.txt  170508105718.txt  170508105759.txt  170508110138.txt  170508110227.txt  170508110348.txt  170508110434.txt  170508110529.txt
recording/surface_data/: surface1.txt
src/: ActionParser.cpp  ActionParser.h  ActionPrediction.cpp  ActionPrediction.h  CAS.cpp  CAS.h  CData.cpp  CData.h  CGraph.cpp  CGraph.h  CKB.cpp  CKB.h  COS.cpp  COS.h  DBSCAN.cpp  DBSCAN.h  DataFilter.h  DataParser.cpp  DataParser.h  Evaluate.cpp  Evaluate.h  Graph.cpp  Graph.h  NBayesClassifier.cpp  NBayesClassifier.h  ObjectDetection.cpp  ObjectPrediction.cpp  ObjectPrediction.h  OpenGLViewer.cpp  OpenGLViewer.h  PFTracker.cpp  Preprocessing.cpp  Preprocessing.h  ReadFile.cpp  ReadFile.h  Test.cpp  Test.h  TestCase.cpp  TestCase.h  Train.cpp  (+33 more)
src (copy)/: Graph.cpp  Graph.h  dataDeclaration.h  kinect_tmp.cpp__  main (copy).cpp__  main.cpp  util.cpp__  util.h  util.h__  util2.cpp  vtkExtra.cpp
src/old/: Graph.cpp  dataDeclaration.h  util2.h  vtkExtra.h
src/unused/: DataContainer_cpp  DataContainer_h  Deployment_cpp  Deployment_h  Graph_h  Prediction_cpp  dataDeclaration_h
src2/: algo.h  dataDeclaration.h  main.cpp  util.cpp  util.h  vtkExtra.cpp
src_laptop/: ActionParser.cpp  ActionParser.h  ActionPrediction.cpp  CAS.cpp  CAS.h  CData.h  CGraph.h  CKB.h  COS.h  DBSCAN.h  DataFilter.cpp  DataFilter.h  DataParser.cpp  Deployment.cpp  Deployment.h  Graph_cpp  ObjectPrediction.h  Prediction_h  ReadFile.h  Test.cpp  Test.h  TestCase.cpp  TestCase.h  Train.h  TrainLA.cpp  TrainSM.h  VTKExtra.cpp  VTKExtra.h  WriteFile.cpp  WriteFile.h  algo.cpp  algo.h  core.h  main.cpp
src_old/: ActionParser.cpp  ActionParser.h  ActionPrediction.cpp  ActionPrediction.h  CAS.cpp  CAS.h  CData.cpp  CGraph.cpp  CGraph.h  CKB.cpp  CKB.h  DBSCAN.cpp  DBSCAN.h  DataFilter.cpp  DataFilter.h  DataParser.cpp  DataParser.h  Deployment.cpp  Deployment.h  Evaluate.cpp  Evaluate.h  ObjectDetection.h  PFTracker.h  ReadFile.cpp  ReadFile.h  Test.cpp  Test.h  TestCase.cpp  TestCase.h  Train.cpp  Train.h  TrainLA.cpp  TrainLA.h  TrainLA_ori.cpp  TrainSM.cpp  TrainSM.h  VTKExtra.cpp  VTKExtra.h  WriteFile.cpp  WriteFile.h  (+8 more)
surface_data/: surface2.txt  surface3.txt  surface4.txt  surface5.txt
surface_data_0508/: surface.txt  surface1.txt  surface2.txt  surface3.txt  surface4.txt  surface5.txt
(+382 files in other folders)
